--- a/youngpioneer/src/main/resources/application.yaml
+++ b/youngpioneer/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/youngpioneer?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone = GMT
+    url: jdbc:mysql://localhost:3306/youngpioneer?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone = GMT&allowPublicKeyRetrieval=true
 #整合mybatis
 mybatis:
   type-aliases-package: com.example.youngpioneer.pojo
